feat: updated basechain queries

--- a/jupyter/notebooks/testing.ipynb
+++ b/jupyter/notebooks/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,270 +23,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>block_number</th>\n",
-       "      <th>block_timestamp</th>\n",
-       "      <th>transaction_hash</th>\n",
-       "      <th>event</th>\n",
-       "      <th>signature</th>\n",
-       "      <th>decoded</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>11667344</td>\n",
-       "      <td>2024-03-11 02:27:15</td>\n",
-       "      <td>0x32f699866d3bb2898752ee821d39cc7f74a8bc30217d...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11673257</td>\n",
-       "      <td>2024-03-11 05:44:21</td>\n",
-       "      <td>0x74b227de6e1e21a30537e1eaa4a7436313d1f6980532...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11673257</td>\n",
-       "      <td>2024-03-11 05:44:21</td>\n",
-       "      <td>0x0e2c7ef22eb427088385712b873fd9bd5217ef9a54cf...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11673258</td>\n",
-       "      <td>2024-03-11 05:44:23</td>\n",
-       "      <td>0x88d5fcfeb144563002d44613b3c460adb527cd8af717...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11673258</td>\n",
-       "      <td>2024-03-11 05:44:23</td>\n",
-       "      <td>0x205ba8945d5543a7d97598103b40bf41264d17162727...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   block_number      block_timestamp  \\\n",
-       "0      11667344  2024-03-11 02:27:15   \n",
-       "1      11673257  2024-03-11 05:44:21   \n",
-       "2      11673257  2024-03-11 05:44:21   \n",
-       "3      11673258  2024-03-11 05:44:23   \n",
-       "4      11673258  2024-03-11 05:44:23   \n",
-       "\n",
-       "                                    transaction_hash        event  \\\n",
-       "0  0x32f699866d3bb2898752ee821d39cc7f74a8bc30217d...  SentMessage   \n",
-       "1  0x74b227de6e1e21a30537e1eaa4a7436313d1f6980532...  SentMessage   \n",
-       "2  0x0e2c7ef22eb427088385712b873fd9bd5217ef9a54cf...  SentMessage   \n",
-       "3  0x88d5fcfeb144563002d44613b3c460adb527cd8af717...  SentMessage   \n",
-       "4  0x205ba8945d5543a7d97598103b40bf41264d17162727...  SentMessage   \n",
-       "\n",
-       "                                           signature  \\\n",
-       "0  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "1  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "2  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "3  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "4  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "\n",
-       "                                             decoded  \n",
-       "0  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...  \n",
-       "1  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...  \n",
-       "2  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...  \n",
-       "3  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...  \n",
-       "4  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "base_withdrawal_started = client.query_pandas(\"\"\"\n",
-    "select block_number, block_timestamp, transaction_hash, 'SentMessage' as event, signature, decoded from base.transaction_logs_decoded\n",
-    "where contract_address = '0x4200000000000000000000000000000000000007'\n",
-    "and method_id = '0xcb0f7ffd78f9aee47a248fae8db181db6eee833039123e026dcbff529522e52a'\n",
-    "\"\"\")\n",
-    "\n",
-    "base_withdrawal_started.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>block_number</th>\n",
-       "      <th>block_timestamp</th>\n",
-       "      <th>transaction_hash</th>\n",
-       "      <th>event</th>\n",
-       "      <th>signature</th>\n",
-       "      <th>decoded</th>\n",
-       "      <th>value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>11667344</td>\n",
-       "      <td>2024-03-11 02:27:15</td>\n",
-       "      <td>0x32f699866d3bb2898752ee821d39cc7f74a8bc30217d...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>11673257</td>\n",
-       "      <td>2024-03-11 05:44:21</td>\n",
-       "      <td>0x74b227de6e1e21a30537e1eaa4a7436313d1f6980532...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>11673257</td>\n",
-       "      <td>2024-03-11 05:44:21</td>\n",
-       "      <td>0x0e2c7ef22eb427088385712b873fd9bd5217ef9a54cf...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>11673258</td>\n",
-       "      <td>2024-03-11 05:44:23</td>\n",
-       "      <td>0x88d5fcfeb144563002d44613b3c460adb527cd8af717...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11673258</td>\n",
-       "      <td>2024-03-11 05:44:23</td>\n",
-       "      <td>0x205ba8945d5543a7d97598103b40bf41264d17162727...</td>\n",
-       "      <td>SentMessage</td>\n",
-       "      <td>SentMessage(address,address,bytes,uint256,uint...</td>\n",
-       "      <td>[\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   block_number      block_timestamp  \\\n",
-       "0      11667344  2024-03-11 02:27:15   \n",
-       "1      11673257  2024-03-11 05:44:21   \n",
-       "2      11673257  2024-03-11 05:44:21   \n",
-       "3      11673258  2024-03-11 05:44:23   \n",
-       "4      11673258  2024-03-11 05:44:23   \n",
-       "\n",
-       "                                    transaction_hash        event  \\\n",
-       "0  0x32f699866d3bb2898752ee821d39cc7f74a8bc30217d...  SentMessage   \n",
-       "1  0x74b227de6e1e21a30537e1eaa4a7436313d1f6980532...  SentMessage   \n",
-       "2  0x0e2c7ef22eb427088385712b873fd9bd5217ef9a54cf...  SentMessage   \n",
-       "3  0x88d5fcfeb144563002d44613b3c460adb527cd8af717...  SentMessage   \n",
-       "4  0x205ba8945d5543a7d97598103b40bf41264d17162727...  SentMessage   \n",
-       "\n",
-       "                                           signature  \\\n",
-       "0  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "1  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "2  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "3  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "4  SentMessage(address,address,bytes,uint256,uint...   \n",
-       "\n",
-       "                                             decoded value  \n",
-       "0  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...     0  \n",
-       "1  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...     0  \n",
-       "2  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...     0  \n",
-       "3  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...     0  \n",
-       "4  [\"0x3154cf16ccdb4c6d922629664174b904d80f2c35\",...     0  "
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "base_withdrawal_started['value'] = base_withdrawal_started['decoded'][0][2]\n",
-    "base_withdrawal_started.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_withdrawal_started.to_csv('../../data/base/l2_withdrawal_started.csv', index=False)"
+    "def withdrawal_initiated(client, chain):\n",
+    "    query = f\"\"\"\n",
+    "    SELECT \n",
+    "        block_number, \n",
+    "        block_timestamp, \n",
+    "        transaction_hash, \n",
+    "        'SentMessage' AS event, \n",
+    "        signature,\n",
+    "        CAST(decoded AS JSON) -> '$[0]' AS nonce,\n",
+    "        CAST(decoded AS JSON) -> '$[1]' AS sender,\n",
+    "        CAST(decoded AS JSON) -> '$[2]' AS target,\n",
+    "        CAST(decoded AS JSON) -> '$[3]' AS value,\n",
+    "        CAST(decoded AS JSON) -> '$[6]' AS withdrawal_hash\n",
+    "    FROM \n",
+    "        {chain}.transaction_logs_decoded\n",
+    "    WHERE \n",
+    "        contract_address = '0x4200000000000000000000000000000000000016'\n",
+    "        and CAST(decoded AS JSON) -> '$[3]' <> 0\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df_l2_withdrawal_initiated = client.query_pandas(query)\n",
+    "\n",
+    "    return df_l2_withdrawal_initiated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def withdrawal_proven(client, contract_address):\n",
+    "    query = f\"\"\"\n",
+    "    SELECT \n",
+    "        block_number, \n",
+    "        block_timestamp, \n",
+    "        transaction_hash, \n",
+    "        method_id, \n",
+    "        'WithdrawalProven' AS event, \n",
+    "        signature, \n",
+    "        CAST(decoded AS JSON) -> '$[0]' AS withdrawalHash \n",
+    "    FROM \n",
+    "        ethereum.transaction_logs_decoded \n",
+    "    WHERE \n",
+    "        contract_address = 'f{contract_address}' \n",
+    "        AND method_id = '0x67a6208cfcc0801d50f6cbe764733f4fddf66ac0b04442061a8a8c0cb6b63f62' -- WithdrawalProven\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df_l1_proven = client.query_pandas(query)\n",
+    "\n",
+    "    return df_l1_proven"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def withdrawal_finalized(client, contract_address):\n",
+    "    query = f\"\"\"\n",
+    "    SELECT \n",
+    "        block_number, \n",
+    "        block_timestamp, \n",
+    "        transaction_hash, \n",
+    "        method_id, \n",
+    "        'WithdrawalFinalized' AS event, \n",
+    "        signature, \n",
+    "        CAST(decoded AS JSON) -> '$[0]' AS withdrawalHash \n",
+    "    FROM \n",
+    "        ethereum.transaction_logs_decoded \n",
+    "    WHERE \n",
+    "        contract_address = 'f{contract_address}' \n",
+    "        AND method_id = '0xdb5c7652857aa163daadd670e116628fb42e869d8ac4251ef8971d9e5727df1b' -- WithdrawalFinalized\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df_l1_finalized = client.query_pandas(query)\n",
+    "\n",
+    "    return df_l1_finalized"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def deposit(client, contract_address):\n",
+    "    query = f\"\"\"\n",
+    "    SELECT \n",
+    "        block_number, \n",
+    "        block_timestamp, \n",
+    "        transaction_hash, \n",
+    "        method_id, \n",
+    "        'TransactionDeposited' AS event, \n",
+    "        signature, \n",
+    "        CAST(decoded AS JSON) -> '$[0]' AS sender,\n",
+    "        CAST(decoded AS JSON) -> '$[1]' AS target,\n",
+    "        CONV(SUBSTR(CAST(decoded AS JSON) -> '$[3]', 3, 64), 16, 10) AS msg_value\n",
+    "    FROM \n",
+    "        ethereum.transaction_logs_decoded \n",
+    "    WHERE \n",
+    "        contract_address = '{contract_address}' \n",
+    "        AND method_id = '0xb3813568d9991fc951961fcb4c784893574240a28925604d09fc577c55bb7c32' -- TransactionDeposited\n",
+    "        AND CONV(SUBSTR(CAST(decoded AS JSON) -> '$[3]', 3, 64), 16, 10) <> 0 -- exclude zero value messages\n",
+    "    \"\"\"\n",
+    "    df_deposit = client.query_pandas(query)\n",
+    "\n",
+    "    return df_deposit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOT EXISTS:  CHAR\n",
+      "NOT EXISTS:  CHAR\n",
+      "NOT EXISTS:  CHAR\n",
+      "NOT EXISTS:  CHAR\n",
+      "NOT EXISTS:  CHAR\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_withdrawals_started = withdrawal_initiated(client=client, chain='base')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOT EXISTS:  CHAR\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_withdrawal_proven = withdrawal_proven(client=client, contract_address='0x49048044d57e1c92a77f79988d21fa8faf74e97e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOT EXISTS:  CHAR\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_withdrawal_finalized = withdrawal_finalized(client=client, contract_address='0x49048044d57e1c92a77f79988d21fa8faf74e97e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NOT EXISTS:  CHAR\n",
+      "NOT EXISTS:  CHAR\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_deposits = deposit(client=client, contract_address='0x49048044d57e1c92a77f79988d21fa8faf74e97e')"
    ]
   }
  ],
